finish user selection and reset

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             </header>
             <main>
                 <div id="gameboard">
+                    <!-- board cells -->
                     <div id="top-left" class="board-cell"></div>
                     <div id="top-middle" class="board-cell"></div>
                     <div id="top-right" class="board-cell"></div>
@@ -28,6 +29,19 @@
                     <div id="bottom-left" class="board-cell"></div>
                     <div id="bottom-middle" class="board-cell"></div>
                     <div id="bottom-right" class="board-cell"></div>
+
+                    <!-- game winner strikethroughs -->
+                    <div id="strikethrough-top-row" class="strikethrough"></div>
+                    <div id="strikethrough-middle-row" class="strikethrough"></div>
+                    <div id="strikethrough-bottom-row" class="strikethrough"></div>
+
+                    <div id="strikethrough-left-col" class="strikethrough"></div>
+                    <div id="strikethrough-middle-col" class="strikethrough"></div>
+                    <div id="strikethrough-right-col" class="strikethrough"></div>
+
+                    <div id="strikethrough-forward-slash" class="strikethrough"></div>
+                    <div id="strikethrough-back-slash" class="strikethrough"></div>
+
                 </div>
             </main>
         </div>
