game win strikethroughs positioned

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     <div id="strikethrough-middle-col" class="strikethrough"></div>
                     <div id="strikethrough-right-col" class="strikethrough"></div>
 
-                    <div id="strikethrough-forward-slash" class="strikethrough"></div>
-                    <div id="strikethrough-back-slash" class="strikethrough"></div>
+                    <div id="strikethrough-forward-slash" class="diagonal-strikethrough"></div>
+                    <div id="strikethrough-back-slash" class="diagonal-strikethrough"></div>
 
                 </div>
             </main>
