--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <link rel="stylesheet" href="styles/styles.css" />
     </head>
     <body>
-        <div id="overlay">
-            <header>
-                <h1 id="title">Tic-Tac-Toe</h1>
-                <div id="reset-btn" class="btn">reset</div>
-            </header>
-            <main>
+        <header>
+            <h1 id="title">Tic-Tac-Toe</h1>
+            <div id="reset-btn" class="btn">reset</div>
+        </header>
+        <main>
+            <div id="overlay">
                 <div id="gameboard">
                     <!-- board cells -->
                     <div id="top-left" class="board-cell"></div>
@@ -35,16 +35,21 @@
                     <div id="strikethrough-middle-row" class="strikethrough"></div>
                     <div id="strikethrough-bottom-row" class="strikethrough"></div>
 
-                    <div id="strikethrough-left-col" class="strikethrough"></div>
-                    <div id="strikethrough-middle-col" class="strikethrough"></div>
-                    <div id="strikethrough-right-col" class="strikethrough"></div>
+                    <div id="strikethrough-left-col" class="strikethrough vertical"></div>
+                    <div id="strikethrough-middle-col" class="strikethrough vertical"></div>
+                    <div id="strikethrough-right-col" class="strikethrough vertical"></div>
 
-                    <div id="strikethrough-forward-slash" class="diagonal-strikethrough"></div>
                     <div id="strikethrough-back-slash" class="diagonal-strikethrough"></div>
-
+                    <div id="strikethrough-forward-slash" class="diagonal-strikethrough"></div>
                 </div>
-            </main>
-        </div>
+            </div>
+            <div id="win">
+                <h2 id="X" class="win-msg">Winner is X</h2>
+                <h2 id="O" class="win-msg">Winner is O</h2>
+                <h2 id="draw" class="win-msg">It's a draw</h2>
+                <div id="play-again-btn" class="btn">Play again</div>
+            </div>
+        </main>
         <!-- scripts -->
         <script src="scripts/index.js"></script>
     </body>
