integrate ai with ui and add difficulty levels

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     </head>
     <body>
         <header>
-            <form action="">
-                <select name="difficulties" id="difficulties">
+            <form action="" id="difficulty-form">
+                <select name="difficulty" id="difficulty">
                     <option value="Easy">Easy</option>
-                    <option value="Medium">Medium</option>
+                    <option value="Normal">Normal</option>
                     <option value="Hard">Hard</option>
                 </select>
             </form>
@@ -57,6 +57,6 @@
             </div>
         </main>
         <!-- scripts -->
-        <script type="module" src="scripts/index.js"></script>
+        <script type="module" src="scripts/index.mjs"></script>
     </body>
 </html>
